--- a/Engine/Engine.csproj
+++ b/Engine/Engine.csproj
@@ -53,12 +53,19 @@
     <Compile Include="DialogService\IDialogService.cs" />
     <Compile Include="Models\GameItem.cs" />
     <Compile Include="Models\ItemFactory.cs" />
+    <Compile Include="Models\ItemQuantity.cs" />
     <Compile Include="Models\Location.cs" />
+    <Compile Include="Models\Monster.cs" />
+    <Compile Include="Models\MonsterFactory.cs" />
     <Compile Include="Models\Player.cs" />
+    <Compile Include="Models\Quest.cs" />
+    <Compile Include="Models\QuestFactory.cs" />
+    <Compile Include="Models\QuestStatus.cs" />
     <Compile Include="Models\Weapon.cs" />
     <Compile Include="Models\World.cs" />
     <Compile Include="Models\WorldFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RandomNumbergenerator.cs" />
     <Compile Include="ViewModels\GameSessionViewModel.cs" />
     <Compile Include="ViewModels\InventarViewModel.cs" />
     <Compile Include="ViewModels\PlayerInfoViewModel.cs" />
@@ -103,6 +110,11 @@
     <Resource Include="Images\Locations\Townbridge.jpg" />
     <Resource Include="Images\Locations\Village.jpg" />
     <Resource Include="Images\Locations\Worldmap.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\Monsters\GiantSpider.png" />
+    <Resource Include="Images\Monsters\Rat.png" />
+    <Resource Include="Images\Monsters\Snake.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
